# akkietradebot

./: Makefile  README.md  pyproject.toml  streamlit_app.py
